Started Implementing OrbisNeighborhood app.
-Implementing the orbis lib dll to the service to watch for console availability call backs.
-Made and added a few new icons

--- a/Executables/OrbisNeighborhood/OrbisNeighborhood.resx
+++ b/Executables/OrbisNeighborhood/OrbisNeighborhood.resx
@@ -120,20 +120,35 @@
   <metadata name="Target_ContextMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>284, 23</value>
   </metadata>
-  <metadata name="mStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="mIPAddress.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="mFirmware.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="mDefault.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="mTargetName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="mDefault.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="mFirmware.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="mIPAddress.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="mStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="mTitle.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="mSDKVersion.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="mConsoleName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="mConsoleType.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TargetContextMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>722, 23</value>
   </metadata>
   <metadata name="darkStatusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>450, 23</value>
@@ -142,6 +157,27 @@
     <value>591, 23</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="AddTarget_Button.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABYSURBVDhPY6AZ+P//vwAQO4AwVIg0ANUMBlAh0gBQ31Ay
+        AKgGHmAw/O/fvwIgDQMockBsANUKAVBBUsABqFYIAApQZgA2AFQENxQqRBoA6hvxBtAJMDAAABL5/4Vh
+        6nvLAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="Settings_Button.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGeSURBVDhPrZLbK4NhHMdnZszKDUa5cqztyiWyS4VSbuTC
+        IRdaCkXuJfkP5FAuR24ku1D8A2op5dYakVM5Z9Eye31+z36PqOXKtz59f8dne5/3dYkcx3FDezabbTMF
+        RFxPLYIPgE/L+cVAFbRCEPwsFuHTuIM/Yc3gIa7EK3QtJ4o+aIRO2IRJhvrwGC4HfMI8YS++AosQJC+w
+        BwRI6vBtSMMtnENKDhAR38GZ1p7xBbzUHGBFcQIezIaK/DpP7Qi6Cd26apb90ANJHbqEZRgmlYvch3ft
+        7UAtoccuh0jm8C14gTeQ5RozgIjDENcDkrAEU7Y5Lg0r8ivoN80foraqI0bkGdsYhFeQX5Ybv6cfMU0V
+        ubzCqC5+QAoSpklQDh0wC/IGMrAHYe0XwxjY+4nDELSYA6wodMGpDsm/OYA1WJc6ZLUXg+/7MaIQgA1I
+        y9BfYkbekNybV9fNM1ZTjMINHII8woXZQMTy7nchAScgX2uJrudEsQlmQD7pEJhbx0XyzPK5j1Iawct0
+        7bfkVCiUWJce4RgatO8VJP4nuVxfwauZDnqMgL8AAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABABYAICACAAEAAQAwAQAAZgEAABAQAgABAAEAsAAAAJYCAAAwMBAAAQAEAGgGAABGAwAAICAQAAEA
