--- a/Executables/OrbisNeighborhood/OrbisNeighborhood.resx
+++ b/Executables/OrbisNeighborhood/OrbisNeighborhood.resx
@@ -157,15 +157,36 @@
   <data name="Settings_DropDown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHTSURBVDhPrZLNK0RhFMbHGMOYssFQVj5rZmWJzFINpWxk
-        4SMLTQpF9pL8B/JRlkM2klmo8Q8oKWVLiHyV70xjZu69c/3OO+8VkpWnns55n/Occ+5773UJbNt2w/Zc
-        LtemBEBejxYl9kOfln8HhirYCoPQT2MRcYpop9PpZ0Iz9KBVEit0Wx6IPtgII5ZlbRAnMPWSx4kygNSa
-        I+0hLsMFPEHOBc6AAIc6CluYM+Aum81ekCdlgID83jCMc6294J0nlqoBDhg0juFRdWgw7OanZprmId4u
-        UrduVc1+2M2WUzHxBFdsWUIb4hgl32XQu9TIt9FrST1Oc4jDLIVNTK8wpZtrlAGQh9m8LwNkCfVFtEmn
-        OCYFB2y/RutTxS+gaUVbFFhkqgLmAQ5vshla8IF6VBU1OHsYENONBkzyJCeqyIBy2AFn5AtQNDEnOId1
-        vRiOOu9HrsJ5ELaoAQ4QOjGd6S0pjHsMWoVroqPlpMY5jvfz/SggBCisY8qI6S/IF8Iv782r29UdqxkQ
-        4wq3bD4gT2C8VB1Avj3ajtwbHjNA/tYS3Z4HYhOchhEYokG9dXl0IHeW330EaZhYptu+Q6bCQsmlieYn
-        th+RN+i6Vyj5P8Hl+gCNkZYjHqz/DwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHWSURBVDhPrZLLK4RhFMbHGJcxZYOhrFxrZmWJzFINpWxk
+        4ZKFJoUie0n+A7mU5ZCNZBZq/ANKStkSIrdyzzTX7+J33nk/IVl56uncnnPO+77f5xLYtu2GHZZltasE
+        wG8gF8EOQK9O/w4E1bANBqCPxiLsNNZOpVIvmBboIVeFrdRteZD0wiYYNk1zEzuJqA8/hrWTySSuOY/b
+        i12Bi2gCxAXOAD9BPYVtxBlwn81mL/ETMkCQTqcfcrnchc69ol3AlqkBDhg0wXGfVIcGw25/5gzDOELb
+        jevWrarZB3vYciYiTnDNlmVyw4QR/D22p6SGv0O+DtfjNAcJ5ihsIXqDcmlprlUCgB9i84EMkCXUl8hN
+        OcVxKThg+w25flX8AppWtUSBPYYqIB4keJfNwOTBHqlHVFGD2MOAqG7MwQQnOVVFBlTATjgrX4CigThO
+        HNL1EjjmvI9chXgItqoBDkh0ITrXW5II9xm0BtclT8qSGnEM7ef7KJDwU9hAlBHRX5AvhF7erVi3qzvW
+        MCDKFe7YfIgfR3ilOoB8e3K7cm94wgD5W0t1ex4km+EMDMMgDerV5ehA7iy/+yipEWy5bvsOmQoLxZcm
+        /sJnth/jN+p6sVD8f4LL9QGH75WrHb4UqwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Button_Attach.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFoSURBVDhPjZO9SsNgFIYzeAcK4hLQQfBnUFRwUBD8BUcX
+        cXVQHMXBRXAXUXD1AnR08gr8QQpegoIODopdapumaX3O973GxtTqA4fkvO97Tr40NKjX652NRmMmSZKz
+        KIpe6BfpR4L/wsAQAxlYdiT7bwif2xCLdqjpUqkU1Wq1e+5HFWlPpVJ51YIB68vl8htLYvoFFwDsPipU
+        mwVjzhYYDL/blVMdy7ZX7DaNpYmkLAQGGTgkU9TwAXVKXeItI+2bbtBvUau84g3XCa3wIPRSS3ZP4Foz
+        v0Lmzg22gkWzyjkI33Ip+M5DZljxLHhj1K5LAcENWeY1v85mbgm6/dopPPlKVkq1Wn2U7ZDsoQ+9nFKQ
+        lcKCJ3n2ZT4kf4MecrR1H3FH3ZPewZc58arTV6geN/QTM5VzxHH8wJOf1X4xpXieFuEc9mUUz8MJxjnu
+        BddJalszduw1al5ev+LtYa6LKtp/RlITQfAJFK0VkPi5XosAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Button_Detach.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAC5SURBVDhPzZK9CsIwFIUDPoCIrg4+gpPv4OTjuAhSEXw+
+        wcXNQQRxEgP5j6ftsUtVEhH0g0vozfkuSVvx38QYl977NR/zCCFMMeDBjO00II8pNqA34fZ7EBxKKW/0
+        GtBT2Bsx9hzkulrrU620UUqdMaTPeBtr7Y7ZlyCzx9KhUoNGjxtJGGMOWAbUqwFzHO/inNumVJnFVRbU
+        vwB+lhVOsckpOAX16gofQV0IvJQjvvM1p0qH+k8R4g4MXqIK0mej+gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="AddTarget_Button.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
